<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width = "match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight = "1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/home_team"
            android:textColor = "#607D8B"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="center"
            android:textSize="14sp"
            android:layout_marginVertical="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initial_score"
            android:textAlignment="center"
            android:id="@+id/home_team_score"
            android:textSize="42sp"
            android:layout_marginBottom="24dp"
            android:textColor="@android:color/tertiary_text_dark"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:id = "@+id/button_home_team_score"
            android:onClick="goal"
            android:layout_margin="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="0dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_score"
                    android:textAlignment="center"
                    android:id="@+id/home_team_yellow"
                    android:textColor="#FFD600"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yellow"
                    android:id="@+id/button_home_team_yellow"
                    android:onClick="foul"
                    android:layout_margin="6dp"
                    android:layout_marginTop="3dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_score"
                    android:textAlignment="center"
                    android:id="@+id/home_team_red"
                    android:textColor="#B00020"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/red"
                    android:id="@+id/button_home_team_red"
                    android:onClick="foul"
                    android:layout_margin="6dp"
                    android:layout_marginTop="3dp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subs"
            android:textAlignment="center"
            android:id="@+id/home_team_subs"
            android:textColor="#03DF65"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subs_taken"
            android:id="@+id/button_home_team_subs"
            android:onClick="substitution"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="1dp"/>

    </LinearLayout>
    
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="16dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight = "1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/away_team"
            android:textColor="#607D8B"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="center"
            android:textSize="14sp"
            android:layout_marginVertical="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initial_score"
            android:textAlignment="center"
            android:id="@+id/away_team_score"
            android:textSize="42sp"
            android:layout_marginBottom="24dp"
            android:textColor="@android:color/tertiary_text_dark"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:id = "@+id/button_away_team_score"
            android:onClick="goal"
            android:layout_margin="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="0dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_score"
                    android:textAlignment="center"
                    android:id="@+id/away_team_yellow"
                    android:textColor="#FFD600"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yellow"
                    android:id="@+id/button_away_team_yellow"
                    android:onClick="foul"
                    android:layout_margin="6dp"
                    android:layout_marginTop="3dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_score"
                    android:textAlignment="center"
                    android:id="@+id/away_team_red"
                    android:textColor="#B00020"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/red"
                    android:id="@+id/button_away_team_red"
                    android:onClick="foul"
                    android:layout_margin="6dp"
                    android:layout_marginTop="3dp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subs"
            android:textAlignment="center"
            android:id="@+id/away_team_subs"
            android:layout_marginTop="3dp"
            android:textColor="#03DF65"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subs_taken"
            android:id="@+id/button_away_team_subs"
            android:onClick="substitution"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="1dp"
            />

    </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "RESET"
        android:onClick="initialise"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"/>


</RelativeLayout>
